[tool.poetry]
name = "english-vocab-crawler"
version = "0.1.0"
description = ""
authors = ["AliJavanJ1 <aj.ali.javan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.1.3"
beautifulsoup4 = "^4.12.2"
selenium = "^4.15.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
